# Projeto

./: .engine.cpp.swp  .gitignore  CMakeLists.txt  README.md  engine.cpp  et --hard HEAD@{5}  generator.cpp  phase1  sistemasolar.xml
buil/: CMakeCache.txt  Makefile  cmake_install.cmake
engine/: main.cpp  transformations.cpp  transformations.h
test_files/test_files_phase_1/: test_1_3.xml  test_1_6.xml
test_files/test_files_phase_2/: sistemasolar.xml  test_2_2.xml
test_files/test_files_phase_3/: sistemasolar.xml
test_files/test_files_phase_4/: cylinder.xml  test_4_1.xml  test_4_6.xml
